Fix svg scaling of GELU on small screens

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -69,4 +69,5 @@ figure.math {
 
 figure.math svg {
   fill: currentColor;
+  max-width: max(60%, 400px);
 }
